--- a/demos/web-audio-api/web-audio-overview-part2.html
+++ b/demos/web-audio-api/web-audio-overview-part2.html
@@ -27,7 +27,7 @@ title: Web Audio API: An Overview
     <div id="controls">
       <p><input id="play" type="button" value="play"><input id="pause" type="button" value="pause" disabled="true"></p>
       <p>Gain: <input id="gain" type="range" value="1" min="0" max="1" step="0.01"></p>
-      <b>There will be more controlls added to this demo soon!</b>
+      <b>There will be more controls added to this demo soon!</b>
     </div>
   </div>
   <script>
