completed the about page

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 layout: default
 title: About Joseph Adams
 extracss: /css/resume.css
+permalink: /about/
 
 ---
 
@@ -9,7 +10,7 @@ extracss: /css/resume.css
 <table><tbody><tr>    
     <td>
     <div id="profile_img">
-        <img src="http://placehold.it/250x250" alt="Joseph Adams" height="250px" width="250px">
+        <img src="/img/profile.jpg" alt="Joseph Adams" height="250px" width="250px">
 
     </div>
     </td>
@@ -20,9 +21,11 @@ extracss: /css/resume.css
         <ul>
             <li><a href="mailto:whitegolem@gmail.com">whitegolem@gmail.com</a></li>
             <li><a href="http://jcla1.com">http://jcla1.com</a></li>
-            <li><a href="https://twitter.com/jcla1">@jcla1</a></li>
         </ul>
     </div>
     </td>
 </tr></tbody></table>
+<p>Joseph is a 14 year old developer currently living in Germany.</p>
+<p>He hacks mainly on Javascript, Ruby and Python, although he sometimes swifts off onto C++ or Java. Always eager to seek more knowledge.</p>
+<p><a href="https://twitter.com/jcla1">You can follow him on Twitter</a>, but he is also on <a href="https://plus.google.com/109982208260057168917/posts">Google+</a> and <a href="https://github.com/jcla1">Github</a>.</p>
 </div>
