--- a/iframes/web_audio_intro.html
+++ b/iframes/web_audio_intro.html
@@ -20,7 +20,7 @@ title: Web Audio API: An Overview
 <body>
   <div id="container">
     <canvas height="200" width="500" id="fft"></canvas>
-    <audio id="audio" src="IO2010.mp3" preload controls></audio>
+    <audio id="audio" src="/data/IO2010.mp3" preload controls></audio>
   </div>
   <script>
   // requestAnim shim layer by Paul Irish
