--- a/archive.html
+++ b/archive.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Welcome!
+title: Archive
 ---
 
 <style>
@@ -20,16 +20,14 @@ width: 240px;
 }
 </style>
 
-<h1>{{ site.title }}</h1>
+<h1>{{ page.title }}</h1>
 
-{% for post in site.posts limit:5 %}
+{% for post in site.posts %}
       <!--p><span>{{ post.date | date: '%B %d, %Y' }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></p-->
       <p class="entity">
         <span class="info"><i>{{ post.date | date: '%B %d, %Y' }}</i></span><a href="{{ post.url }}">{{ post.title }}</a><br>
         {{ post.abstract }}
       </p>
 {% endfor %}
-<p class="entity"><a href="/archive">More</a></p>
 
-{% include projects.html %}
 {% include about.html %}
