--- a/iframes/ulam_spiral.html
+++ b/iframes/ulam_spiral.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<style>*{margin:0;overflow:hidden;}</style>
-<div id="container"></div>
+<style>* {padding:0; margin:0; border: 0; outline: 0;}</style>
+<body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="https://raw.github.com/jcla1/ulam/master/matrix.js"></script>
 <script>
@@ -58,10 +58,10 @@ d3.range(dimention).forEach(function(i){
 
 
 function draw(){
-  svg = d3.select('#container')
+  svg = d3.select('body')
           .append('svg')
             .attr('width', width)
-            .attr('height', height)
+            .attr('height', height);
 
   g = svg.selectAll('g')
          .data(data)
