made a reduce step more consice thanks to 1wheel (Adam Pearce)

--- a/_posts/2013-05-11-javascript-mapreduce.html
+++ b/_posts/2013-05-11-javascript-mapreduce.html
@@ -72,11 +72,7 @@ var words = Array.prototype.slice.call(document.getElementsByTagName('title'))
     return node.innerText.toLowerCase().match(/([a-z]+)/g);
   })</span>
   .reduce(function(last, now) {
-    now.forEach(function(word) {
-      last.push(word);
-    });
-
-    return last;
+    return last.concat(now);
   }, []);
 </code></pre>
 
