removed explicit h1 font size so it defaults to 96px

--- a/_posts/2012-06-15-getting-to-work-with-codemirror.html
+++ b/_posts/2012-06-15-getting-to-work-with-codemirror.html
@@ -5,7 +5,7 @@ date: 2012-06-15
 abstract: A short intro to getting a simple CodeMirror demo up and running.
 ---
 
-<h1 style="font-size:96px;">{{ page.title }}</h1>
+<h1>{{ page.title }}</h1>
 
 <p>Recently on <a href="http://news.ycombinator.com/">Hackernews</a> I found an interesting link. It pointed to <a href="http://rubyfiddle.com/">RubyFiddle</a>. The site is really nice, but my favourite bit was the editor.</p>
 <p>By then I had already guessed they hadn't done it themselves so I <em>investigated</em> (looked in the source..) and found they're using <a href="http://codemirror.net/">CodeMirror</a>.
