--- a/_posts/2013-05-13-crawling-hackernews.html
+++ b/_posts/2013-05-13-crawling-hackernews.html
@@ -5,7 +5,7 @@ date: 2013-05-13
 abstract: An approach to collecting the complete <a href="https://news.ycombinator.com/">HackerNews</a> database explained.
 ---
 
-<h1 style="font-size:96px;">{{ page.title }}</h1>
+<h1>{{ page.title }}</h1>
 
 <p>It's been a while now since I started developing <a href="https://github.com/jcla1/HN2JSON">HN2JSON</a> and I am actually still quite happy with that achievement.
 If you've not heard of <a href="https://github.com/jcla1/HN2JSON">HN2JSON</a> yet, it's basically a simple Ruby interface to <a href="https://news.ycombinator.com/">HackerNews</a>.</p>
