--- a/archive.html
+++ b/archive.html
@@ -22,11 +22,5 @@ width: 240px;
 
 <h1>{{ page.title }}</h1>
 
-{% for post in site.posts %}
-      <p class="entity">
-        <span class="info"><i>{{ post.date | date: '%B %d, %Y' }}</i></span><a href="{{ post.url }}">{{ post.title }}</a><br>
-        {{ post.abstract }}
-      </p>
-{% endfor %}
-
+{% include articles.html %}
 {% include about.html %}
