--- a/index.html
+++ b/index.html
@@ -22,13 +22,8 @@ width: 240px;
 
 <h1>{{ site.title }}</h1>
 
-{% for post in site.posts %}
-      <p class="entity">
-        <span class="info"><i>{{ post.date | date: '%B %d, %Y' }}</i></span><a href="{{ post.url }}">{{ post.title }}</a><br>
-        {{ post.abstract }}
-      </p>
-{% endfor %}
-
+<h2><a name="posts" href="#posts">#</a>Blog Posts</h2>
+{% include articles.html %}
 <!--p class="entity"><a href="/archive">More Posts</a></p-->
 
 {% include projects.html %}
