Adjusted CSS for easier transition to microschema

--- a/_posts/2011-12-10-rsa-public-private-key-encryption-explained.html
+++ b/_posts/2011-12-10-rsa-public-private-key-encryption-explained.html
@@ -5,7 +5,7 @@ date: 2011-12-10
 abstract: A brief overview of how public/private key encryption actually work.
 ---
 
-<h1 style="font-size:70px;">{{ page.title }}</h1>
+<h1>{{ page.title }}</h1>
 
 <p>In this blog post I'll show you how to calculate a simple RSA private-/public-key pair.</p>
 
