--- a/index.html
+++ b/index.html
@@ -2,25 +2,9 @@
 layout: post
 title: Joseph Adams
 ---
+<style>p{margin-left: 30px;}</style>
 
-<style>
-p {margin-left: 30px;}
-
-.info {
-color: #636363;
-font-size: smaller;
-margin: 2px 0 0 480px;
-position: absolute;
-text-align: right;
-width: 240px;
-}
-
-.entity {
-  margin-bottom: 35px;
-}
-</style>
-
-<h1>{{ site.title }}</h1>
+<h1>{{ page.title }}</h1>
 
 <h2><a name="posts" href="#posts">#</a>Blog Posts</h2>
 {% include articles.html %}
