--- a/_posts/2012-01-07-exploring-the-v8-js-engine-part-1.html
+++ b/_posts/2012-01-07-exploring-the-v8-js-engine-part-1.html
@@ -5,8 +5,7 @@ date: 2012-01-07
 abstract: Looks into the basics of programming with <a href="https://code.google.com/p/v8/">V8</a> & C++. First part of <a href="https://code.google.com/p/v8/">V8</a> series.
 ---
 
-
-<h1 style="font-size:82px;">{{ page.title }}</h1>
+<h1>{{ page.title }}</h1>
 
 <p>This is the first part of a 2 part series giving a simple technical overview of the V8 Javascript engine.</p>
 
