--- a/_posts/2012-01-08-exploring-the-v8-js-engine-part-2.html
+++ b/_posts/2012-01-08-exploring-the-v8-js-engine-part-2.html
@@ -5,7 +5,7 @@ date: 2012-01-08
 abstract: Introduction to shared variables and Node.js source. Second part of <a href="https://code.google.com/p/v8/">V8</a> series.
 ---
 
-<h1 style="font-size:82px;">{{ page.title }}</h1>
+<h1>{{ page.title }}</h1>
 
 <p>This is the second part of a 2 part series giving a simple technical overview of the V8 Javascript engine.</p>
 
