--- a/archive.html
+++ b/archive.html
@@ -2,23 +2,7 @@
 layout: post
 title: Archive
 ---
-
-<style>
-p {margin-left: 30px;}
-
-.info {
-color: #636363;
-font-size: smaller;
-margin: 2px 0 0 480px;
-position: absolute;
-text-align: right;
-width: 240px;
-}
-
-.entity {
-  margin-bottom: 35px;
-}
-</style>
+<style>p{margin-left: 30px;}</style>
 
 <h1>{{ page.title }}</h1>
 
