Added new page layout

--- a/archive.html
+++ b/archive.html
@@ -1,8 +1,6 @@
 ---
-layout: post
+layout: page
 title: Archive
 ---
-<style>p{margin-left: 30px;}</style>
-
 {% include articles.html %}
 {% include about.html %}
