--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
-layout: post
+layout: page
 title: Joseph Adams
 ---
-<style>p{margin-left: 30px;}</style>
-
 <h2><a name="posts" href="#posts">#</a>Blog Posts</h2>
 {% include articles.html %}
 <!--p class="entity"><a href="/archive">More Posts</a></p-->
