Fixed another style. Updated js example to match new html elements from mircodata.

--- a/_posts/2013-05-11-javascript-mapreduce.html
+++ b/_posts/2013-05-11-javascript-mapreduce.html
@@ -210,7 +210,7 @@ var nodes = [];
 var circle = [];
 var force;
 
-var svg = d3.select("body").append("svg")
+var svg = d3.select("div[itemprop=articleBody]").append("svg")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
     .attr("class", "vis")
