Moved blog post to new location

--- a/_posts/2014-04-08-100-days-of-github.html
+++ b/_posts/2014-04-08-100-days-of-github.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 100 days of Github
+date: 2014-04-08
 abstract: Endeavour into the Github contributions streak trend.
 ---
 
