--- a/_posts/2012-01-03-using-content-providers-in-android.html
+++ b/_posts/2012-01-03-using-content-providers-in-android.html
@@ -3,6 +3,7 @@ layout: post
 title: Using content providers in Android
 date: 2012-01-03
 abstract: Short sample of pulling data in from <a href="http://developer.android.com/guide/topics/providers/content-providers.html">content providers</a>.
+redirect_from: /hello-world/
 ---
 
 <p>In this blog post I'll show you how to get data stored on an Android phone using content providers.
