--- a/_posts/2011-12-10-rsa-public-private-key-encryption-explained.html
+++ b/_posts/2011-12-10-rsa-public-private-key-encryption-explained.html
@@ -3,6 +3,7 @@ layout: post
 title: RSA public/private key encryption explained
 date: 2011-12-10
 abstract: A brief overview of how public/private key encryption actually work.
+redirect_from: /blog/2011/12/10/rsa-public-private-key-encryption-explained/
 ---
 
 <p>In this blog post I'll show you how to calculate a simple RSA private-/public-key pair.</p>
