--- a/_posts/2013-05-11-javascript-mapreduce.html
+++ b/_posts/2013-05-11-javascript-mapreduce.html
@@ -3,6 +3,7 @@ layout: post
 title: Javascript and MapReduce
 date: 2013-05-11
 abstract: A quick programming exercise, featuring the <code>MapReduce</code> functionality of Javascript.
+redirect_from: /blog/2013/05/11/javascript-mapreduce/
 ---
 
 <p>Don't we all love feeling like <b>big data scientists</b>, <b>data miners</b> or <em>&lt;insert data buzzword here&gt;</em>?<br>Well here's a way to get that feeling in your everyday life:</p>
