--- a/_posts/2013-05-13-crawling-hackernews.html
+++ b/_posts/2013-05-13-crawling-hackernews.html
@@ -3,6 +3,7 @@ layout: post
 title: Crawling HackerNews
 date: 2013-05-13
 abstract: An approach to collecting the complete <a href="https://news.ycombinator.com/">HackerNews</a> database explained.
+redirect_from: /blog/2013/05/13/crawling-hackernews/
 ---
 
 <p class="warning">With the new <a href="https://hn.algolia.com">HN Search</a> there's also a great <a href="https://hn.algolia.com/api">REST API</a> provided. You should go check it out!</p>
