--- a/_posts/2014-01-02-personal-annual-report-2013.html
+++ b/_posts/2014-01-02-personal-annual-report-2013.html
@@ -3,6 +3,7 @@ layout: post
 title: Personal Annual Report 2013
 date: 2014-01-02
 abstract: My first endeavour into self-tracking and personal analytics.
+redirect_from: /blog/2014/01/02/personal-annual-report-2013/
 ---
 
 <p class="warning">For those of you just looking for the actual report, you can find it right <a href="/par/2013/">here</a>.</p>
