--- a/_posts/2014-03-01-fosdem-lightning-talk-video.html
+++ b/_posts/2014-03-01-fosdem-lightning-talk-video.html
@@ -3,6 +3,7 @@ layout: post
 title: FOSDEM 2014 lightning talk video
 date: 2014-03-01
 abstract: Video of my lightning talk at FOSDEM 2014 about <a href="https://github.com/jcla1/gisp">Gisp</a>.
+redirect_from: /blog/2014/03/01/fosdem-lightning-talk-video/
 ---
 
 <p>Last month I was in Brussels with <a href="http://pipetree.com/qmacro">@qmacro</a> for <a href="https://fosdem.org/2014/">FOSDEM 2014</a>. At the time I was working on a little side project: <a href="https://github.com/jcla1/gisp">Gisp</a>, a Lisp to Go compiler. On the Sunday I decided it was time to present Gisp to the world, so I gave a lightning talk in the Go room.</p>
