--- a/_posts/2012-01-08-exploring-the-v8-js-engine-part-2.html
+++ b/_posts/2012-01-08-exploring-the-v8-js-engine-part-2.html
@@ -3,6 +3,7 @@ layout: post
 title: Exploring the V8 JS engine (Part 2 of 2)
 date: 2012-01-08
 abstract: Introduction to shared variables and Node.js source. Second part of <a href="https://code.google.com/p/v8/">V8</a> series.
+redirect_from: /blog/2012/01/08/exploring-the-v8-js-engine-part-2/
 ---
 
 <p>This is the second part of a 2 part series giving a simple technical overview of the V8 Javascript engine.</p>
