--- a/_posts/2012-06-15-getting-to-work-with-codemirror.html
+++ b/_posts/2012-06-15-getting-to-work-with-codemirror.html
@@ -3,6 +3,7 @@ layout: post
 title: Getting to work with CodeMirror
 date: 2012-06-15
 abstract: A short intro to getting a simple CodeMirror demo up and running.
+redirect_from: /blog/2012/06/15/getting-to-work-with-codemirror/
 ---
 
 <p>Recently on <a href="http://news.ycombinator.com/">Hackernews</a> I found an interesting link. It pointed to <a href="http://rubyfiddle.com/">RubyFiddle</a>. The site is really nice, but my favourite bit was the editor.</p>
