--- a/_posts/2012-12-28-on-ulam-spirals-and-matrix-generation.html
+++ b/_posts/2012-12-28-on-ulam-spirals-and-matrix-generation.html
@@ -3,6 +3,7 @@ layout: post
 title: On Ulam spirals and matrix generation
 date: 2012-12-28
 abstract: Implementing an algorithm for generating <a href="http://en.wikipedia.org/wiki/Ulam_spiral">Ulam spirals</a> in Javascript.
+redirect_from: /blog/2012/12/28/on-ulam-spirals-and-matrix-generation/
 ---
 
 <p>One of my Christmas presents was the fabulous book: <a href="http://shop.oreilly.com/product/0636920025429.do">Getting Started with D3</a> by Mike Dewar.</p>
