Added proof image

--- a/_posts/2014-04-08-100-days-of-github.html
+++ b/_posts/2014-04-08-100-days-of-github.html
@@ -26,4 +26,4 @@ redirect_from: /blog/2014/04/08/100-days-of-github/
 <p>Beyond all this, the most important thing is you. Well not really, it's your <i>ideas</i>. They are what make your streaks possible in the first place, so they'd better be good ones. But I digress.</p>
 <p>Just make sure you have fun and get over the first two weeks, those are the hardest. So with this in mind, onwards and upwards! 200 days of Github, hopefully see you then.</p>
 
-<!-- INSERT MISSING PROOF PICTURE HERE -->
+<img src="/public/img/streak-100.png">
