--- a/_posts/2014-04-08-100-days-of-github.html
+++ b/_posts/2014-04-08-100-days-of-github.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 100 days of Github
+title: 100 Days of Github
 date: 2014-04-08
 abstract: Endeavour into the Github contributions streak trend.
 redirect_from: /blog/2014/04/08/100-days-of-github/
