--- a/_posts/2014-04-08-100-days-of-github.html
+++ b/_posts/2014-04-08-100-days-of-github.html
@@ -11,7 +11,7 @@ redirect_from: /blog/2014/04/08/100-days-of-github/
 <h2>An open source project</h2>
 <p>Github is a platform for open source projects, so to build up your commit streak it will obviously be a great help to either contribute regularly to or even maintain an open source project, or multiple projects. This has saved me a few times during my streak, because as Ryan Seys already noticed in his <a href="https://ryanseys.com/blog/177-days-of-github/">blog post</a> about commit streaks:</p>
 <blockquote>Pull requests count for 1 contribution when you make them and another contribution if they are merged. If they don’t get merged, sorry, no second contribution.</blockquote>
-<p>So no need to directly send a pull request (PR) when you push, you can take your time knowing that your PR will also count as a contribution. Plus if you get promoted to contributer status in a repository, your merge commits (of other PRs) also count as contributions.</p>
+<p>So no need to directly send a pull request (PR) when you push, you can take your time knowing that your PR will also count as a contribution. Plus if you get promoted to contributor status in a repository, your merge commits (of other PRs) also count as contributions.</p>
 <p>In my case, I contributed to a <a href="https://github.com/kennyledet/Algorithm-Implementations">repository of algorithms</a>, which you should go check out (pun definitely intended) and contribute to. This repository also has the nice effect that there's a near infinite number of algorithms to implement (combined with an equally large number of different languages), so you won't run out of things to implement and might even learn a new language.</a>
 
 <h2>A blog</h2>
