Drafts are now working, but I've no idea why.

--- a/_drafts/better-page-timings-for-google-analytics.html
+++ b/_drafts/better-page-timings-for-google-analytics.html
@@ -1,7 +1,6 @@
 ---
 layout: post
-title: Better page timings with Google Analytics
-date: 2014-05-01
+title: Better page timings for Google Analytics
 abstract: Experiment to find a better way to track pageview times with Google Analytics.
 ---
 
