--- a/_drafts/better-page-timings-for-google-analytics.html
+++ b/_drafts/better-page-timings-for-google-analytics.html
@@ -28,15 +28,20 @@ So there's no opportunity for GA to calculate a proper page timing!
 We can easily fix that! Because GA will also consider events as pageviews when it comes to calculating the session duration.
 All we need to do is send off an event at the appropriate time... but when is the appropriate time?
 This is a tough question and it's very hard to answer (but I'll get back to it, I promise), so let's send one every ten seconds, just to make sure.
+Here's the adjusted GA snippet:
+<pre><code></code></pre>
+Now what does that give us? Let's see: INSERT PICTURE HERE
+Ah, that's what I like to see! We've got a XXXX.XX% **increase** in the average session duration and the bounce rate dropped by XX%.
+So this solution seems to work, or does it? Because in my oppionion XX mins is quite a long time for reading my relatively short blog posts.
+Maybe we can find an explanation by adjusting our sittuation: Now, the visitor visits your page from a link aggregator and if I think about the way I use link aggregators, I'll exit them with 20 new tabs open.
+See, there's the cause! The visitor opens your blog post, but he may not actually view it until he's finished dealing with the other 19 tabs.
+This wasn't a problem when GA had to figure the average time out by itself, because most recorded timings were zero.
+But now this has changed! Once a user opens the tab with your page loaded in it, we're telling GA that the visitor is on your site!
+So that's the next problem to fix!
 
+2nd attempt
+-----------
 
-- GA is nice, but lacks good measure of page view time,
-  if only one page is visited, like on a blog
-- 1st attempt:
-    - When user enters page, send pageview and the send events every 10s
-    - Pageview times went up
-    - Bouncerate went down
-    - But can we optimize?
 - 2nd attempt:
     - Work with visibility of page to find when to send the
       pageview event
