--- a/_drafts/optimizing-google-analytics.html
+++ b/_drafts/optimizing-google-analytics.html
@@ -19,8 +19,9 @@ abstract: Experiment to find a better way to track pageview times with Google An
 <p>Because Google Analytics will also consider events as pageviews when it comes to calculating the session duration. All we need to do is send off an event at the appropriate time... but when is the appropriate time?</p>
 <p>This is a tough question and it's very hard to answer (but I'll get back to it, I promise), so let's send one every ten seconds, just to make sure. Here's the adjusted Google Analytics snippet:</p>
 <pre><code>Hello World</code></pre>
-<p>Now what does that give us? Let's see: INSERT PICTURE HERE</p>
-<p>Ah, that's what I like to see! We've got a XXXX.XX% <em>increase</em> in the average session duration and the bounce rate <em>dropped</em> by XX%. So this solution seems to work, or does it? Because I think XX mins is a bit too long for reading my relatively short blog posts.</p>
+<p>Now what does that give us? Let's see:</p>
+<img src="/public/img/high-page-time-1.jpg">
+<p>Ah, that's what I like to see! We've got a 3,331.25% <em>increase</em> in the average session duration and the bounce rate <em>dropped</em> by 91.54%. So this solution seems to work, or does it? Because I think 26 mins is a bit too long for reading my relatively short blog posts.</p>
 <p>Maybe we can find an explanation by adjusting our sittuation: Now, the visitor visits your page from a link aggregator and if I think about the way I use link aggregators, I'll exit them with 20 new tabs open.</p>
 <p>See, there's the cause! The visitor opens your blog post, but he may not actually view it until he's finished dealing with the other 19 tabs. This wasn't a problem when Google Analytics had to figure the average time out by itself, because most recorded timings were zero.</p>
 <p>But now this has changed! Once a user opens the tab with your page loaded in it, we're telling Google Analytics that the visitor is on your site! So that's the next problem to fix!</p>
