Added link to include Kaffeesatz

--- a/resume/index.html
+++ b/resume/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Resumé</title>
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700">
         <link rel="stylesheet" href="/public/css/style.css" type="text/css" />
         <style>
             #container {
