--- a/_drafts/improving-go-cookie-handling.html
+++ b/_drafts/improving-go-cookie-handling.html
@@ -25,6 +25,8 @@ if cookie != "" {
 
 <p>Simply put, this snippet just takes the raw cookie string and replaces, in this case, the backslash with an underscore (a character known not to occur in cookies issued by the Quizduell servers), puts the cookie back into the http response and manually tells the API client's cookiejar to store the cookies of this peticular response. Notice, you need your own cookiejar (<code>c.Jar</code>), since the one included in http clients is private.</p>
 
+<p>The following snippet, that loads the cookies stored in our cookiejar and attaches them to a new http request, is a bit more complicated, because it needs to handle the case of there already being other cookies that were set previously on the request.</p>
+
 <pre><code>cookies := c.Jar.Cookies(request.URL)
 if len(cookies) > 0 {
     for _, cookie := range cookies {
@@ -40,4 +42,7 @@ if len(cookies) > 0 {
 }
 </code></pre>
 
-- Include link to Go issue tracker: https://code.google.com/p/go/issues/detail?id=7243
+<p>But the idea is the same, load the cookie as a raw string, replace the underscores with the forbidden backslashes and manually attach the cookie as a header on the request.</p>
+<p>And it works! perfectly fine in fact. Though as you can guess, this is not the ideal solution for all possible sittuations. We quickly run into a problem if there's no character where we know that it won't occur in the cookie (in our case that was the underscore, incase you haven't noticed yet). So this got me thinking, and I've thought of something else that will always work, but comes at the cost of slower loading and saving of the cookies. Though these slowdowns will be negligible for most applications.</p>
+
+<h2>There she blows! Base64 encoding</h2>
